image downloaded locally

--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ span {
 
 body {
     text-align: center;
-    background-image: url("https://news.sanfordhealth.org/wp-content/uploads/2019/01/fruits-and-weights-for-healthy-weight-gain.jpg");
+    background-image: url("./images/fruits-and-weights-for-healthy-weight-gain.jpg");
     background-size: cover;
 }
 
